refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -153,7 +153,7 @@
   flex-flow: row;
   row-gap: 3vw;
   justify-content: space-between;
-  margin: 5.3vw 1.5vw 0 0;
+  margin: 4.5vw 1.5vw 0 0;
 }
 
 .siteShortcuts > .linkButton {
